--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Admin/AdminComplaintDetailPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Admin/AdminComplaintDetailPage.xaml
@@ -45,7 +45,7 @@
                                         <!--Information Report Title-->
                                         <Label Text="Information Report" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
                                         <Line Style="{StaticResource HorizontalLine}"/>
-                                        <Grid RowSpacing="20" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+                                        <Grid RowSpacing="20" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
                                             <!--Complaint ID-->
                                             <Label Grid.Row="0" Grid.Column="0" Text="Complaint ID" TextColor="#0FC5BA" FontSize="Medium" />
                                             <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.ComplaintID}" Style="{StaticResource CardLabel}"/>
@@ -70,12 +70,35 @@
                                             <Label Grid.Row="5" Grid.Column="0" Text="Description" TextColor="#0FC5BA" FontSize="Medium"/>
                                             <Label Grid.Row="5" Grid.Column="1" Text="{Binding Complaint.Damage}" Style="{StaticResource CardLabel}" />
 
-                                            <!--Location-->
-                                            <Label Grid.Row="6" Grid.Column="0" Text="Location" TextColor="#0FC5BA" FontSize="Medium"/>
-                                            <Label Grid.Row="6" Grid.Column="1" Text="{Binding Complaint.Location}" Style="{StaticResource CardLabel}"/>
                                         </Grid>
                                     </StackLayout>
                                 </Frame>
+
+                                <Frame Style="{StaticResource Card}">
+                                    <StackLayout>
+                                        <!--Location Title-->
+                                        <Label Text="Location" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
+                                        <Line Style="{StaticResource HorizontalLine}"/>
+                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+
+                                            <!--Location-->
+                                            <Label Grid.Row="0" Grid.Column="0" Text="Location" TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.Location}" Style="{StaticResource CardLabel}"/>
+
+                                            <!--Map-->
+                                            <Label Grid.Row="3" Grid.Column="0" Text="Location in Map"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Grid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
+                                                <ContentView HeightRequest="500" Content="{Binding Map}"/>
+                                                <Image Source="placePin.png" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" HeightRequest="25"/>
+                                            </Grid>
+
+                                            <!--Image-->
+                                            <Label Grid.Row="5" Grid.Column="0" Text="Reference Picture"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Image Grid.Row="6" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
+                                        </Grid>
+                                    </StackLayout>
+                                </Frame>
+
                                 <Frame Style="{StaticResource Card}">
                                     <StackLayout>
                                         <!--Information Technician information-->
