--- a/UTeM_EComplaint/UTeM_EComplaint/Cells/TechnicianCompletedCell.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Cells/TechnicianCompletedCell.xaml
@@ -27,8 +27,7 @@
                     <Label Text="{Binding Action.StartDate}" HorizontalOptions="Start"  Style="{StaticResource CardLabel}"></Label>
                     <Label Text="-" Style="{StaticResource CardLabel}"/>
                     <Label Text="{Binding Action.EndDate}" HorizontalOptions="Start"  Style="{StaticResource CardLabel}"></Label>
-                    <Label Text="{Binding TotalDays}" Style="{StaticResource CardLabel}" HorizontalOptions="EndAndExpand"/>
-                    <Label Text="days" Style="{StaticResource CardLabel}" HorizontalOptions="End"/>
+                    <Label Text="{Binding Duration}" Style="{StaticResource CardLabel}" HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
             </StackLayout>
         </StackLayout>
