--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffAddComplaintPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffAddComplaintPage.xaml
@@ -18,7 +18,7 @@
                             <StackLayout>
                                 <Label Text="Complaint" Style="{StaticResource DetailTitle}"/>
                                 <Line X1="0" Y1="0" X2="360" Y2="0" Margin="0,0,0,20" HorizontalOptions="CenterAndExpand" Stroke="black"/>
-                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="30">
+                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="10">
                                     <!--Compaint Date-->
                                     <Label Grid.Row="0" Grid.Column="0" Text="Date" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding DateTimeString}"  TextColor="Black" FontSize="Small"/>
@@ -41,34 +41,63 @@
                                                 TextColor="Black" />
                                     <!--Damage-->
                                     <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Problem Description" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Editor Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.Damage}" AutoSize="TextChanges"/>
+                                    <Editor Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Placeholder="Description" Text="{Binding Complaint.Damage}" AutoSize="TextChanges"/>
 
-                                    <!--Location-->
-                                    <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Text="Location/Department" TextColor="#0FC5BA" FontSize="Medium" />
-
-                                    <Button Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Text="Add Location" Style="{StaticResource Button}" Command="{Binding AddLocationCommand}" IsVisible="{Binding IsNotLocation}"  />
-
-                                    <AbsoluteLayout Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" IsVisible="{Binding IsLocation}" >
-                                        <StackLayout>
-                                            <Label Style="{StaticResource CardLabel}" Text="{Binding Location}" HorizontalTextAlignment="Start" />
-                                        </StackLayout>
-                                        <Image HeightRequest="50" AbsoluteLayout.LayoutBounds="1, 10, 25, 25"
-                                           AbsoluteLayout.LayoutFlags="PositionProportional"
-                                           Source="xmark.png" Aspect="AspectFit" >
-                                            <Image.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding ClearLocationCommand}"/>
-                                            </Image.GestureRecognizers>
-                                        </Image>
-                                    </AbsoluteLayout>
                                     <!--Contact Number-->
-                                    <Label Grid.Row="11" Grid.Column="0" Text="Contact number" TextColor="#0FC5BA" FontSize="Medium" />
-                                    <Entry Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.ContactPhoneNumber}" />
-
-                                    <Button Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" Text="Save" Style="{StaticResource Button}"
-                                    Command="{Binding SaveCommand}"/>
+                                    <Label Grid.Row="9" Grid.Column="0" Text="Contact number" TextColor="#0FC5BA" FontSize="Medium" />
+                                    <Entry Grid.Row="10" Grid.Column="0" Placeholder="01X-XXXXXXXX" Grid.ColumnSpan="2" Text="{Binding Complaint.ContactPhoneNumber}" />
                                 </Grid>
                             </StackLayout>
                         </Frame>
+                        <Frame Style="{StaticResource Card}">
+                            <StackLayout>
+                                <!--Location Title-->
+                                <Label Text="Location" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
+                                <Line Style="{StaticResource HorizontalLine}"/>
+                                <Grid RowSpacing="20" RowDefinitions="Auto,Auto">
+                                    <!--Location-->
+                                    <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Location/Department" TextColor="#0FC5BA" FontSize="Medium" />
+
+                                    <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Add Location" Style="{StaticResource Button}" Command="{Binding AddLocationCommand}" IsVisible="{Binding IsNotLocation}"  />
+
+                                    <StackLayout Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" IsVisible="{Binding IsLocation}">
+                                        <Grid RowSpacing="30" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
+
+                                            <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+                                                <Label Style="{StaticResource CardLabel}" Text="{Binding Location}"/>
+                                                <ImageButton VerticalOptions="Start" Source="pencil.png" HeightRequest="25" BackgroundColor="Transparent" 
+                                                             Command="{Binding EditLocationCommand}" HorizontalOptions="End"/>
+                                            </Grid>
+                                            <!--<AbsoluteLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" IsVisible="{Binding IsLocation}" Margin="0,-10,0,10" >
+                                                <StackLayout>
+                                                    <Label Style="{StaticResource CardLabel}" Text="{Binding Location}" HorizontalTextAlignment="Start" />
+                                                </StackLayout>
+                                                <Image HeightRequest="50" AbsoluteLayout.LayoutBounds="1, 10, 25, 25"
+                                           AbsoluteLayout.LayoutFlags="PositionProportional"
+                                           Source="pencil.png" Aspect="AspectFit">
+                                                    <Image.GestureRecognizers>
+                                                        <TapGestureRecognizer Command="{Binding EditLocationCommand}"/>
+                                                    </Image.GestureRecognizers>
+                                                </Image>
+                                            </AbsoluteLayout>-->
+
+                                            <!--Image-->
+                                            <Label Grid.Row="1" Grid.Column="0" Text="Reference Picture"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Image Grid.Row="2" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
+
+                                            <!--Map-->
+                                            <Label Grid.Row="3" Grid.Column="0" Text="Location in Map"  TextColor="#0FC5BA" FontSize="Medium" />
+                                            <Grid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
+                                                <ContentView HeightRequest="500" Content="{Binding Map}"/>
+                                                <Image Source="placePin.png" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" HeightRequest="25" />
+                                            </Grid>
+                                        </Grid>
+                                    </StackLayout>
+                                </Grid>
+                            </StackLayout>
+                        </Frame>
+                        <Button Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" Text="Save" Style="{StaticResource Button}"
+                                    Command="{Binding SaveCommand}"/>
                     </StackLayout>
                 </StackLayout>
             </ScrollView>
