--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffEditComplaintPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffEditComplaintPage.xaml
@@ -19,7 +19,7 @@
                             <StackLayout>
                                 <Label Text="Compaint" Style="{StaticResource DetailTitle}"/>
                                 <Line X1="0" Y1="0" X2="360" Y2="0" Margin="0,0,0,20" HorizontalOptions="CenterAndExpand" Stroke="black"/>
-                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="30">
+                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="30">
                                     <!--Compaint Date-->
                                     <Label Grid.Row="0" Grid.Column="0" Text="Date" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.ComplaintDate}"  TextColor="Black" FontSize="Small"/>
@@ -52,33 +52,60 @@
                                     <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Problem Description" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Entry Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.Damage}" FontSize="Medium" />
 
+                                </Grid>
+                            </StackLayout>
+                        </Frame>
+                        <Frame Style="{StaticResource Card}">
+                            <StackLayout>
+                                <!--Location Title-->
+                                <Label Text="Location" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
+                                <Line Style="{StaticResource HorizontalLine}"/>
+                                <Grid RowSpacing="20" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+
                                     <!--Location-->
-                                    <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Text="Location/Department" TextColor="#0FC5BA" FontSize="Medium" />
+                                    <!--Location-->
+                                    <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Location/Department" TextColor="#0FC5BA" FontSize="Medium" />
 
-                                    <Button Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Text="Add Location" Style="{StaticResource Button}" Command="{Binding AddLocationCommand}" IsVisible="{Binding IsNotLocation}"  />
+                                    <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Add Location" Style="{StaticResource Button}" Command="{Binding AddLocationCommand}" IsVisible="{Binding IsNotLocation}"  />
 
-                                    <AbsoluteLayout Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" IsVisible="{Binding IsLocation}" Margin="0,-10,0,10" >
+                                    <AbsoluteLayout Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" IsVisible="{Binding IsLocation}" Margin="0,-10,0,10" >
                                         <StackLayout>
                                             <Label Style="{StaticResource CardLabel}" Text="{Binding Location}" HorizontalTextAlignment="Start" />
                                         </StackLayout>
                                         <Image HeightRequest="50" AbsoluteLayout.LayoutBounds="1, 10, 25, 25"
                                            AbsoluteLayout.LayoutFlags="PositionProportional"
-                                           Source="xmark.png" Aspect="AspectFit" >
+                                           Source="pencil.png" Aspect="AspectFit">
                                             <Image.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding ClearLocationCommand}"/>
+                                                <TapGestureRecognizer Command="{Binding AddLocationCommand}"/>
                                             </Image.GestureRecognizers>
                                         </Image>
                                     </AbsoluteLayout>
 
-                                    <!--Complaint Status-->
-                                    <Label Grid.Row="11" Grid.Column="0" Text="Status" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Label Grid.Row="11" Grid.Column="1" Text="{Binding Complaint.ComplaintStatus}" Style="{StaticResource ComplaintStatus}"></Label>
+                                    <!--Image-->
+                                    <Label Grid.Row="3" Grid.Column="0" Text="Reference Picture"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                    <Image Grid.Row="4" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
 
-                                    <Button Grid.Row="12" Grid.Column="0" Text="Save" BackgroundColor="{StaticResource SaveButtonColor}" Command="{Binding SaveCommand}" Style="{StaticResource Button}" Margin="3,14"/>
-                                    <Button Grid.Row="12" Grid.Column="1" Text="Clear" BackgroundColor="{StaticResource ClearButtonColor}" Command="{Binding ClearCommand}" Style="{StaticResource Button}" Margin="3,14"/>
+                                    <!--Map-->
+                                    <Label Grid.Row="5" Grid.Column="0" Text="Location in Map"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                    <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2">
+                                        <ContentView HeightRequest="500" Content="{Binding Map}"/>
+                                        <Image Source="placePin.png" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" HeightRequest="25"/>
+                                    </Grid>
                                 </Grid>
                             </StackLayout>
                         </Frame>
+                        <Frame Style="{StaticResource Card}">
+                            <StackLayout>
+                                <!--Complaint Status-->
+                                <Label Text="Status" Style="{StaticResource DetailTitle}"/>
+                                <Line Style="{StaticResource HorizontalLine}"/>
+                                <Label Text="{Binding Complaint.ComplaintStatus}" Style="{StaticResource ComplaintStatus}" HorizontalOptions="CenterAndExpand"></Label>
+                            </StackLayout>
+                        </Frame>
+                        <StackLayout Orientation="Horizontal">
+                            <Button Grid.Row="1" Grid.Column="0" Text="Save" BackgroundColor="{StaticResource SaveButtonColor}" Command="{Binding SaveCommand}" Style="{StaticResource Button}" Margin="3,14"/>
+                            <Button Grid.Row="1" Grid.Column="1" Text="Clear" BackgroundColor="{StaticResource ClearButtonColor}" Command="{Binding ClearCommand}" Style="{StaticResource Button}" Margin="3,14"/>
+                        </StackLayout>
                     </StackLayout>
                 </StackLayout>
             </ScrollView>
