--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Technician/JobDetailPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Technician/JobDetailPage.xaml
@@ -78,6 +78,35 @@
                                     </StackLayout>
                                 </Frame>
 
+                                <Frame Style="{StaticResource Card}">
+                                    <StackLayout>
+                                        <!--Location Title-->
+                                        <Label Text="Location" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
+                                        <Line Style="{StaticResource HorizontalLine}"/>
+                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+
+                                            <!--Location-->
+                                            <Label Grid.Row="0" Grid.Column="0" Text="Location" TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.Location}" Style="{StaticResource CardLabel}"/>
+
+                                            <!--Image-->
+                                            <Label Grid.Row="2" Grid.Column="0" Text="Location in Map"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
+                                                <ContentView HeightRequest="500" Content="{Binding Map}">
+                                                    <ContentView.GestureRecognizers>
+                                                        <TapGestureRecognizer Command="{Binding  OpenMapCommand}"/>
+                                                    </ContentView.GestureRecognizers>
+                                                </ContentView>
+                                                <Image Source="placePin.png" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" HeightRequest="25"/>
+                                            </Grid>
+
+                                            <!--Image-->
+                                            <Label Grid.Row="4" Grid.Column="0" Text="Reference Picture"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Image Grid.Row="5" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
+                                        </Grid>
+                                    </StackLayout>
+                                </Frame>
+                                
                                 <Frame Style="{StaticResource Card}" IsVisible="{Binding IsInProgress}">
                                     <StackLayout>
                                         <!--Action Taken Title-->
@@ -138,6 +167,10 @@
                                             <Label Grid.Row="4" Grid.Column="0" Text="Additional note" TextColor="#0FC5BA" FontSize="Medium" IsVisible="{Binding IsCompleted}"/>
                                             <!--Note Display when completed-->
                                             <Label Grid.Row="4" Grid.Column="1" Text="{Binding Complaint.Action.AdditionalNote}" IsVisible="{Binding IsCompleted}" Style="{StaticResource CardLabel}"></Label>
+
+                                            <!--Duration-->
+                                            <Label Grid.Row="5" Grid.Column="0" IsVisible="{Binding IsCompleted}" Text="Duration" TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Label Grid.Row="5" Grid.Column="1" Text="{Binding Duration}" IsVisible="{Binding IsCompleted}" Style="{StaticResource CardLabel}"></Label>
                                         </Grid>
                                     </StackLayout>
                                 </Frame>
